--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,7 +7,7 @@
     tools:context=".ChatActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewID"
         android:layout_width="368dp"
         android:layout_height="482dp"
         android:layout_marginBottom="8dp"
