--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_chat"
         android:icon="@drawable/comment_white_oval_bubble"
         android:title="@string/title_chat" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_news"
         android:icon="@drawable/ic_news"
         android:title="@string/title_news" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_user"
         android:icon="@drawable/user_shape"
         android:title="@string/title_user" />
 
